@@ -2,7 +2,7 @@
  * message_english.h
  * Message text and data in English language.
  *
- * Copyright 2005-2006 by Dale McCoy.
+ * Copyright 2005-2007 by Dale McCoy.
  * Copyright 2006 by Dan Masek.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -257,6 +257,7 @@ NFO_MESSAGE(ACT3_PRECEEDS_PROP08,"Prop 08 has not been set for ID %2x.\n",USE_PR
 NFO_MESSAGE(MASKED_BIT_SET,"GRFID has a bit set that is clear in the mask.\n",USE_PREFIX)
 NFO_MESSAGE(DISCARD_UNSTORED,"Operation 0F follows a non-store operation.\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(NO_PERS_REGS,"No persistent registers exist for this feature.\n",USE_PREFIX|HAS_OFFSET)
+NFO_MESSAGE(DUPLICATE_TRANS_TABLE,"Cargo translation table previously found at sprite %d.\n",USE_PREFIX)
 
 /* Insert new NFO_MESSAGEs above this line unless a MESSAGE_UNUSED appears in a logical location. */
 
