@@ -8,6 +8,7 @@ v3.4.5 to
 - Check that variational 2 operator 0F's left-hand side side was stored.
 - Prohibit storing to persistent registers when they don't exist.
 - Fix several bugs in the formatting of variable-length properties.
+- Check cargo types against the cargo translation table.
 
 v3.4.4 to v3.4.5 (r1396)
 - Data file updates:
